chore(server): format api doc
