# server/handler/comment_add.go
@@ -10,18 +10,18 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-// @Summary		新增评论
-// @Description	新增评论
-// @Tags			评论
-// @Param			path	formData	string		true	"评论路径"
-// @Param			name	formData	string		true	"发送者昵称"
-// @Param			email	formData	string		true	"发送者邮箱"
-// @Param			link	formData	string		true	"发送者网站"
-// @Param			body	string		formData	string	true	"正文"
-// @Success		200		{object}	common.Resp{}
-// @Failure		400		{object}	common.Resp{}
-// @Failure		500		{object}	common.Resp{}
-// @Router			/api/comment/add [post]
+//	@Summary		新增评论
+//	@Description	新增评论
+//	@Tags			评论
+//	@Param			path	formData	string		true	"评论路径"
+//	@Param			name	formData	string		true	"发送者昵称"
+//	@Param			email	formData	string		true	"发送者邮箱"
+//	@Param			link	formData	string		true	"发送者网站"
+//	@Param			body	string		formData	string	true	"正文"
+//	@Success		200		{object}	common.Resp{}
+//	@Failure		400		{object}	common.Resp{}
+//	@Failure		500		{object}	common.Resp{}
+//	@Router			/api/comment/add [post]
 func CommentAdd(router fiber.Router) {
 	router.Post("/add", func(c *fiber.Ctx) error {
 		path := c.FormValue("path")
