# server/handler/comment_get_all.go
@@ -8,12 +8,12 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-// @Summary		获取所有评论
-// @Description	获取所有评论
-// @Tags			评论
-// @Success		200	{object}	common.Resp{data=[]entity.CookedComment}
-// @Failure		500	{object}	common.Resp
-// @Router			/api/comment/getAll [get]
+//	@Summary		获取所有评论
+//	@Description	获取所有评论
+//	@Tags			评论
+//	@Success		200	{object}	common.Resp{data=[]entity.CookedComment}
+//	@Failure		500	{object}	common.Resp
+//	@Router			/api/comment/getAll [get]
 func CommentGetAll(router fiber.Router) {
 	router.Get("/getAll", func(c *fiber.Ctx) error {
 		rawData, _ := query.Comment.Find()
