# server/handler/comment_get_by_path.go
@@ -8,13 +8,13 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-// @Summary		根据路径获取评论
-// @Description	根据路径获取评论
-// @Tags			评论
-// @Params			path query string true "路径"
-// @Success		200	{object}	common.Resp{data=[]entity.CookedComment}
-// @Failure		500	{object}	common.Resp
-// @Router			/api/comment/getByPath [get]
+//	@Summary		根据路径获取评论
+//	@Description	根据路径获取评论
+//	@Tags			评论
+//	@Params			path query string true "路径"
+//	@Success		200	{object}	common.Resp{data=[]entity.CookedComment}
+//	@Failure		500	{object}	common.Resp
+//	@Router			/api/comment/getByPath [get]
 func CommentGetByPath(router fiber.Router) {
 	router.Get("/getByPath", func(c *fiber.Ctx) error {
 		rawData, _ := query.Comment.Where(query.Comment.Path.Eq(c.Query("path"))).Find()
